# psychopy-eyetracker-pupil-labs

./: MANIFEST.in  README.md  pyproject.toml
.github/workflows/: docs.yaml  tests.yaml
docs/: .buildinfo  index.html  objects.inv  searchindex.js
docs/.doctrees/: download.doctree  environment.pickle  index.doctree
docs/.doctrees/builder/components/: AprilTagComponent.doctree
docs/.doctrees/coder/: core.doctree  neon.doctree
docs/_modules/: index.html
docs/_modules/psychopy/iohub/devices/eyetracker/eye_events/: index.html
docs/_modules/psychopy_eyetracker_pupil_labs/pupil_labs/neon/eyetracker/: index.html
docs/_modules/psychopy_eyetracker_pupil_labs/pupil_labs/pupil_core/eyetracker/: index.html
docs/_sources/builder/components/: AprilTagComponent.rst.txt
docs/builder/components/AprilTagComponent/: index.html
docs/coder/core/: index.html
docs/coder/neon/: index.html
docs/download/: index.html
docs/genindex/: index.html
docs/search/: index.html
docs_src/: conf.py  download.rst  index.rst
psychopy_eyetracker_pupil_labs/: __init__.py
psychopy_eyetracker_pupil_labs/pupil_labs/: components.py  stimuli.py
psychopy_eyetracker_pupil_labs/pupil_labs/neon/: __init__.py  default_eyetracker.yaml  eyetracker.py  settings.py  supported_config_settings.yaml
psychopy_eyetracker_pupil_labs/pupil_labs/pupil_core/: __init__.py  data_parse.py  default_eyetracker.yaml  eyetracker.py  pupil_remote.py  settings.py
tests/test_builder/: test_eyetracker_backend.py
