[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psychopy-eyetracker-pupil-labs"
version = "0.3.0"
description = "Extension package for PsychoPy which adds support for Pupil Labs eyetrackers."
readme = "README.md"
requires-python = ">= 3.7"
license = {text = "GNU General Public License v3 (GPLv3)"}
authors = [
  { name = "Sol Simpson", email = "info@isolver-software.com" },
  { name = "Matthew Cutone", email = "mcutone@opensceincetools.org" },
  { name = "Jon Peirce", email = "jon@opensceincetools.org" },
  { name = "Dominic Canare", email = "dom@pupil-labs.com" },
]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
urls.homepage = "https://github.com/psychopy/psychopy-eyetracker-pupil-labs"
urls.changelog = "https://github.com/psychopy/psychopy-eyetracker-pupil-labs/blob/main/CHANGELOG.txt"
urls.documentation = "https://pages.github.com/psychopy/psychopy-eyetracker-pupil-labs"
urls.repository = "https://github.com/psychopy/psychopy-eyetracker-pupil-labs"
dependencies = [
  "pupil-labs-realtime-api",
  "real-time-screen-gaze"
]

[project.optional-dependencies]
# dependencies for building the docs
docs = [
  "psychopy",
  "sphinx",
  "furo",
]
# dependencies for running the test suite
tests = [
  "psychopy",
  "pytest",
]

[tool.setuptools.packages.find]
where = ["", "psychopy_eyetracker_pupil_labs",]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.png"]

[project.entry-points."psychopy.iohub.devices.eyetracker"]
neon = "psychopy_eyetracker_pupil_labs.pupil_labs.neon"
pupil_core = "psychopy_eyetracker_pupil_labs.pupil_labs.pupil_core"

[project.entry-points."psychopy.experiment.components"]
AprilTagComponent = "psychopy_eyetracker_pupil_labs.pupil_labs.components:AprilTagComponent"
AprilTagFrameComponent = "psychopy_eyetracker_pupil_labs.pupil_labs.components:AprilTagFrameComponent"
